--- a/assignments/assignment_1.ipynb
+++ b/assignments/assignment_1.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,37 +55,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vector of expected returns (q):\n",
+      "Asset_1      0.640808\n",
+      "Asset_2      0.179484\n",
+      "Asset_3      0.607434\n",
+      "Asset_4     -0.057847\n",
+      "Asset_5      0.508896\n",
+      "               ...   \n",
+      "Asset_96     0.236522\n",
+      "Asset_97     0.496411\n",
+      "Asset_98    -0.022446\n",
+      "Asset_99     0.409178\n",
+      "Asset_100    0.125338\n",
+      "Length: 100, dtype: float64\n",
+      "\n",
+      "Covariance matrix (P):\n",
+      "             Asset_1    Asset_2    Asset_3    Asset_4    Asset_5    Asset_6  \\\n",
+      "Asset_1    35.908528  27.769374  25.866829  26.649889  27.083634  27.782598   \n",
+      "Asset_2    27.769374  38.098514  27.050221  27.792044  27.550363  30.815317   \n",
+      "Asset_3    25.866829  27.050221  35.146148  25.473934  25.549242  29.346697   \n",
+      "Asset_4    26.649889  27.792044  25.473934  33.855364  24.548041  27.758137   \n",
+      "Asset_5    27.083634  27.550363  25.549242  24.548041  34.808593  27.860956   \n",
+      "...              ...        ...        ...        ...        ...        ...   \n",
+      "Asset_96   27.556890  28.294641  25.697731  26.649673  27.771625  28.849631   \n",
+      "Asset_97   25.725566  28.055820  25.926564  26.605727  25.353566  27.169984   \n",
+      "Asset_98   27.982862  27.162378  25.367418  26.035063  27.327070  26.448691   \n",
+      "Asset_99   28.212491  28.556784  26.270291  23.837625  26.693953  26.809684   \n",
+      "Asset_100  24.659424  26.385770  24.802766  23.154760  25.850131  27.326324   \n",
+      "\n",
+      "             Asset_7    Asset_8    Asset_9   Asset_10  ...   Asset_91  \\\n",
+      "Asset_1    26.209894  25.229894  25.132939  30.112918  ...  26.562082   \n",
+      "Asset_2    27.338611  26.536104  23.751897  28.885664  ...  29.088561   \n",
+      "Asset_3    26.005360  25.599203  22.690702  27.973137  ...  25.325151   \n",
+      "Asset_4    25.018793  22.891405  24.578212  26.315687  ...  25.170022   \n",
+      "Asset_5    26.826464  26.055827  22.421099  29.288926  ...  25.387137   \n",
+      "...              ...        ...        ...        ...  ...        ...   \n",
+      "Asset_96   27.530119  25.556867  24.646765  28.425373  ...  28.519181   \n",
+      "Asset_97   26.227595  23.372019  23.965272  26.849805  ...  27.069328   \n",
+      "Asset_98   25.099572  24.536759  24.349024  28.832907  ...  26.184640   \n",
+      "Asset_99   26.024044  25.470443  23.728129  28.569161  ...  26.268345   \n",
+      "Asset_100  23.315054  21.853092  22.697453  25.417649  ...  23.589147   \n",
+      "\n",
+      "            Asset_92   Asset_93   Asset_94   Asset_95   Asset_96   Asset_97  \\\n",
+      "Asset_1    27.939346  25.526414  28.356386  25.583638  27.556890  25.725566   \n",
+      "Asset_2    30.728952  23.713378  30.606553  25.883387  28.294641  28.055820   \n",
+      "Asset_3    28.847453  24.594770  26.692297  27.033179  25.697731  25.926564   \n",
+      "Asset_4    27.741750  22.207498  27.260724  24.483916  26.649673  26.605727   \n",
+      "Asset_5    29.437140  22.339402  27.265443  27.113695  27.771625  25.353566   \n",
+      "...              ...        ...        ...        ...        ...        ...   \n",
+      "Asset_96   29.800171  23.863406  27.109770  26.476062  35.801285  27.559090   \n",
+      "Asset_97   27.975904  23.067554  27.617581  24.442080  27.559090  34.043471   \n",
+      "Asset_98   27.748093  22.207166  27.221072  25.869366  25.896056  25.883938   \n",
+      "Asset_99   28.196363  24.421992  26.263902  24.797335  27.430062  25.285686   \n",
+      "Asset_100  26.303771  21.884631  25.660426  25.492099  25.251007  24.459374   \n",
+      "\n",
+      "            Asset_98   Asset_99  Asset_100  \n",
+      "Asset_1    27.982862  28.212491  24.659424  \n",
+      "Asset_2    27.162378  28.556784  26.385770  \n",
+      "Asset_3    25.367418  26.270291  24.802766  \n",
+      "Asset_4    26.035063  23.837625  23.154760  \n",
+      "Asset_5    27.327070  26.693953  25.850131  \n",
+      "...              ...        ...        ...  \n",
+      "Asset_96   25.896056  27.430062  25.251007  \n",
+      "Asset_97   25.883938  25.285686  24.459374  \n",
+      "Asset_98   34.373018  26.868980  23.591572  \n",
+      "Asset_99   26.868980  35.285162  24.828956  \n",
+      "Asset_100  23.591572  24.828956  29.756914  \n",
+      "\n",
+      "[100 rows x 100 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Set the dimensions\n",
     "T = 1000  # Number of time periods\n",
     "N = 100   # Number of assets\n",
     "\n",
-    "# Generate a random mean vector and covariance matrix for the multivariate normal distribution\n",
-    "# mean = <your code here>\n",
-    "# cov = <your code here>\n",
+    "# Generate a random mean vector from a normal distribution\n",
+    "mean = np.random.rand(N)\n",
+    "# Generate a random covariance matrix\n",
+    "A = np.random.rand(N, N)\n",
+    "cov = np.dot(A, A.transpose())  # To ensure the covariance matrix is positive semi-definite\n",
     "\n",
     "# Generate the Multivariate-Normal random dataset\n",
-    "# data = <your code here>\n",
+    "data = np.random.multivariate_normal(mean, cov, T)\n",
     "\n",
     "# Convert the dataset to a DataFrame for easier manipulation\n",
     "df = pd.DataFrame(data, columns=[f'Asset_{i+1}' for i in range(N)])\n",
     "\n",
+    "\n",
     "# Compute the vector of expected returns (mean returns) from df\n",
-    "# q =  <your code here>\n",
+    "scalefactor = 1\n",
+    "expected_return = ExpectedReturn(method='arithmetic', scalefactor=scalefactor)\n",
+    "q= expected_return.estimate(X=df, inplace=False)\n",
     "\n",
     "# Compute the covariance matrix from df\n",
-    "# P = <your code here>\n",
+    "covariance = Covariance(method='pearson')\n",
+    "P = covariance.estimate(X=df, inplace=False)\n",
+    "\n",
     "\n",
     "# Display the results\n",
     "print(\"Vector of expected returns (q):\")\n",
     "print(q)\n",
-    "\n",
+    "# \n",
     "print(\"\\nCovariance matrix (P):\")\n",
     "print(P)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.84327227, 0.33279283, 0.57938234, 0.11061847, 0.44939613,\n",
+       "       0.77133017, 0.32663374, 0.94114959, 0.96320663, 0.34238742,\n",
+       "       0.88270503, 0.39901046, 0.62533041, 0.68319486, 0.38868207,\n",
+       "       0.15925195, 0.63539713, 0.28000947, 0.75229739, 0.4843771 ,\n",
+       "       0.82656712, 0.77662533, 0.57931831, 0.29804091, 0.17571095,\n",
+       "       0.96539813, 0.35819744, 0.64231055, 0.3118272 , 0.67064347,\n",
+       "       0.94650214, 0.0866464 , 0.01716606, 0.68550322, 0.05368673,\n",
+       "       0.36105651, 0.14852124, 0.84304714, 0.88549113, 0.88888332,\n",
+       "       0.29491922, 0.68191632, 0.80059527, 0.89854149, 0.34575876,\n",
+       "       0.39474191, 0.38205575, 0.85388519, 0.76876971, 0.9283753 ,\n",
+       "       0.69720655, 0.83450307, 0.66142521, 0.74347626, 0.71151703,\n",
+       "       0.70109329, 0.97700828, 0.5734034 , 0.67502591, 0.27583677,\n",
+       "       0.47840375, 0.30971579, 0.98508601, 0.49189496, 0.57443099,\n",
+       "       0.13686638, 0.62379821, 0.89114842, 0.94777433, 0.96170709,\n",
+       "       0.01719947, 0.19358678, 0.00770478, 0.5816621 , 0.8405023 ,\n",
+       "       0.87834023, 0.85973865, 0.19004717, 0.30875598, 0.37028386,\n",
+       "       0.47679976, 0.15143882, 0.58624471, 0.44149938, 0.72455095,\n",
+       "       0.50940041, 0.52340566, 0.15839861, 0.94531427, 0.38234536,\n",
+       "       0.79679546, 0.72293974, 0.05980824, 0.88246653, 0.5103167 ,\n",
+       "       0.28681271, 0.39102527, 0.06894813, 0.4230586 , 0.03512026])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean"
    ]
   },
   {
@@ -263,7 +384,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
