--- a/assignments/assignment_1.ipynb
+++ b/assignments/assignment_1.ipynb
@@ -230,32 +230,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<optimization.constraints.Constraints at 0x1663129c9d0>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Instantiate the Constraints class\n",
     "constraints = Constraints(ids = df.columns.tolist())\n",
     "\n",
     "# Add budget constraint\n",
-    "#<your code here>\n",
+    "constraints.add_budget(rhs=1, sense='=')\n",
     "\n",
     "# Add box constraints (i.e., lower and upper bounds)\n",
-    "#<your code here>\n",
+    "constraints.add_box(lower=0, upper=0.2)\n",
     "\n",
     "# Add linear constraints\n",
-    "#<your code here>"
+    "G = pd.DataFrame(np.zeros((3, N)), columns=constraints.ids)\n",
+    "G.iloc[0, :30] = 1\n",
+    "G.iloc[1, 30:60] = 1\n",
+    "G.iloc[2, 60:] = 1\n",
+    "h = pd.Series([0.3, 0.4, 0.5])\n",
+    "constraints.add_linear(G=G, sense='<=', rhs=h)\n"
    ]
   },
   {
