--- a/assignments/assignment_1.ipynb
+++ b/assignments/assignment_1.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -63,71 +63,71 @@
      "output_type": "stream",
      "text": [
       "Vector of expected returns (q):\n",
-      "Asset_1      0.640808\n",
-      "Asset_2      0.179484\n",
-      "Asset_3      0.607434\n",
-      "Asset_4     -0.057847\n",
-      "Asset_5      0.508896\n",
+      "Asset_1      0.585686\n",
+      "Asset_2      0.289911\n",
+      "Asset_3      0.562792\n",
+      "Asset_4      0.267083\n",
+      "Asset_5      0.234132\n",
       "               ...   \n",
-      "Asset_96     0.236522\n",
-      "Asset_97     0.496411\n",
-      "Asset_98    -0.022446\n",
-      "Asset_99     0.409178\n",
-      "Asset_100    0.125338\n",
+      "Asset_96     0.614382\n",
+      "Asset_97     0.393991\n",
+      "Asset_98     0.769293\n",
+      "Asset_99     0.611028\n",
+      "Asset_100    0.373884\n",
       "Length: 100, dtype: float64\n",
       "\n",
       "Covariance matrix (P):\n",
       "             Asset_1    Asset_2    Asset_3    Asset_4    Asset_5    Asset_6  \\\n",
-      "Asset_1    35.908528  27.769374  25.866829  26.649889  27.083634  27.782598   \n",
-      "Asset_2    27.769374  38.098514  27.050221  27.792044  27.550363  30.815317   \n",
-      "Asset_3    25.866829  27.050221  35.146148  25.473934  25.549242  29.346697   \n",
-      "Asset_4    26.649889  27.792044  25.473934  33.855364  24.548041  27.758137   \n",
-      "Asset_5    27.083634  27.550363  25.549242  24.548041  34.808593  27.860956   \n",
+      "Asset_1    31.798509  24.828966  23.662610  25.713142  25.702657  26.527809   \n",
+      "Asset_2    24.828966  35.649954  25.004459  28.357161  27.693394  27.788563   \n",
+      "Asset_3    23.662610  25.004459  28.230190  23.935030  23.845259  25.355326   \n",
+      "Asset_4    25.713142  28.357161  23.935030  33.957776  25.772156  28.040510   \n",
+      "Asset_5    25.702657  27.693394  23.845259  25.772156  35.794538  29.065975   \n",
       "...              ...        ...        ...        ...        ...        ...   \n",
-      "Asset_96   27.556890  28.294641  25.697731  26.649673  27.771625  28.849631   \n",
-      "Asset_97   25.725566  28.055820  25.926564  26.605727  25.353566  27.169984   \n",
-      "Asset_98   27.982862  27.162378  25.367418  26.035063  27.327070  26.448691   \n",
-      "Asset_99   28.212491  28.556784  26.270291  23.837625  26.693953  26.809684   \n",
-      "Asset_100  24.659424  26.385770  24.802766  23.154760  25.850131  27.326324   \n",
+      "Asset_96   25.032439  26.960581  24.669273  25.286453  27.098781  28.033079   \n",
+      "Asset_97   25.846834  25.581775  24.009683  25.915902  25.456399  27.243913   \n",
+      "Asset_98   25.751505  25.290374  23.463767  24.794877  24.609001  27.625584   \n",
+      "Asset_99   23.707565  24.997276  22.476418  25.073545  27.542504  25.701971   \n",
+      "Asset_100  23.798140  25.863643  22.028535  24.798842  26.642750  27.336813   \n",
       "\n",
       "             Asset_7    Asset_8    Asset_9   Asset_10  ...   Asset_91  \\\n",
-      "Asset_1    26.209894  25.229894  25.132939  30.112918  ...  26.562082   \n",
-      "Asset_2    27.338611  26.536104  23.751897  28.885664  ...  29.088561   \n",
-      "Asset_3    26.005360  25.599203  22.690702  27.973137  ...  25.325151   \n",
-      "Asset_4    25.018793  22.891405  24.578212  26.315687  ...  25.170022   \n",
-      "Asset_5    26.826464  26.055827  22.421099  29.288926  ...  25.387137   \n",
+      "Asset_1    22.451932  23.030788  25.157065  24.888600  ...  27.450182   \n",
+      "Asset_2    25.804661  24.408286  25.563606  28.026171  ...  30.013697   \n",
+      "Asset_3    22.247263  22.037824  23.155575  25.163837  ...  25.254345   \n",
+      "Asset_4    24.066374  24.166841  25.673821  28.087775  ...  27.374562   \n",
+      "Asset_5    24.605094  27.184966  26.229834  29.156419  ...  30.136023   \n",
       "...              ...        ...        ...        ...  ...        ...   \n",
-      "Asset_96   27.530119  25.556867  24.646765  28.425373  ...  28.519181   \n",
-      "Asset_97   26.227595  23.372019  23.965272  26.849805  ...  27.069328   \n",
-      "Asset_98   25.099572  24.536759  24.349024  28.832907  ...  26.184640   \n",
-      "Asset_99   26.024044  25.470443  23.728129  28.569161  ...  26.268345   \n",
-      "Asset_100  23.315054  21.853092  22.697453  25.417649  ...  23.589147   \n",
+      "Asset_96   24.958360  25.104988  23.614508  27.321970  ...  29.582720   \n",
+      "Asset_97   25.479159  25.033189  25.848578  25.082477  ...  27.039137   \n",
+      "Asset_98   23.035461  25.185998  24.079060  25.465900  ...  28.235282   \n",
+      "Asset_99   23.422970  23.768306  22.571479  27.187264  ...  27.284146   \n",
+      "Asset_100  24.016125  25.490205  24.591237  25.168876  ...  27.667219   \n",
       "\n",
       "            Asset_92   Asset_93   Asset_94   Asset_95   Asset_96   Asset_97  \\\n",
-      "Asset_1    27.939346  25.526414  28.356386  25.583638  27.556890  25.725566   \n",
-      "Asset_2    30.728952  23.713378  30.606553  25.883387  28.294641  28.055820   \n",
-      "Asset_3    28.847453  24.594770  26.692297  27.033179  25.697731  25.926564   \n",
-      "Asset_4    27.741750  22.207498  27.260724  24.483916  26.649673  26.605727   \n",
-      "Asset_5    29.437140  22.339402  27.265443  27.113695  27.771625  25.353566   \n",
+      "Asset_1    22.724318  23.266935  22.639816  27.536734  25.032439  25.846834   \n",
+      "Asset_2    25.799591  23.505997  26.143261  26.538477  26.960581  25.581775   \n",
+      "Asset_3    21.212548  22.276455  22.934749  26.348289  24.669273  24.009683   \n",
+      "Asset_4    24.192174  24.282259  24.109219  28.360268  25.286453  25.915902   \n",
+      "Asset_5    26.150767  25.367212  25.454959  27.858957  27.098781  25.456399   \n",
       "...              ...        ...        ...        ...        ...        ...   \n",
-      "Asset_96   29.800171  23.863406  27.109770  26.476062  35.801285  27.559090   \n",
-      "Asset_97   27.975904  23.067554  27.617581  24.442080  27.559090  34.043471   \n",
-      "Asset_98   27.748093  22.207166  27.221072  25.869366  25.896056  25.883938   \n",
-      "Asset_99   28.196363  24.421992  26.263902  24.797335  27.430062  25.285686   \n",
-      "Asset_100  26.303771  21.884631  25.660426  25.492099  25.251007  24.459374   \n",
+      "Asset_96   25.591816  24.655579  24.626150  27.738594  36.909203  25.660508   \n",
+      "Asset_97   22.001233  24.206813  23.946797  26.741887  25.660508  33.122540   \n",
+      "Asset_98   23.591314  25.068191  23.666375  26.241087  25.879062  24.023446   \n",
+      "Asset_99   25.012250  23.324901  24.722591  27.326022  24.939260  23.536313   \n",
+      "Asset_100  23.924915  24.614905  23.063713  26.557706  24.845289  24.160696   \n",
       "\n",
       "            Asset_98   Asset_99  Asset_100  \n",
-      "Asset_1    27.982862  28.212491  24.659424  \n",
-      "Asset_2    27.162378  28.556784  26.385770  \n",
-      "Asset_3    25.367418  26.270291  24.802766  \n",
-      "Asset_4    26.035063  23.837625  23.154760  \n",
-      "Asset_5    27.327070  26.693953  25.850131  \n",
+      "Asset_1    25.751505  23.707565  23.798140  \n",
+      "Asset_2    25.290374  24.997276  25.863643  \n",
+      "Asset_3    23.463767  22.476418  22.028535  \n",
+      "Asset_4    24.794877  25.073545  24.798842  \n",
+      "Asset_5    24.609001  27.542504  26.642750  \n",
       "...              ...        ...        ...  \n",
-      "Asset_96   25.896056  27.430062  25.251007  \n",
-      "Asset_97   25.883938  25.285686  24.459374  \n",
-      "Asset_98   34.373018  26.868980  23.591572  \n",
-      "Asset_99   26.868980  35.285162  24.828956  \n",
-      "Asset_100  23.591572  24.828956  29.756914  \n",
+      "Asset_96   25.879062  24.939260  24.845289  \n",
+      "Asset_97   24.023446  23.536313  24.160696  \n",
+      "Asset_98   31.857823  23.619728  23.714653  \n",
+      "Asset_99   23.619728  32.069621  24.101358  \n",
+      "Asset_100  23.714653  24.101358  31.642184  \n",
       "\n",
       "[100 rows x 100 columns]\n"
      ]
@@ -155,11 +155,11 @@
     "# Compute the vector of expected returns (mean returns) from df\n",
     "scalefactor = 1\n",
     "expected_return = ExpectedReturn(method='arithmetic', scalefactor=scalefactor)\n",
-    "q= expected_return.estimate(X=df, inplace=False)\n",
+    "expected_return.estimate(X=df, inplace=True)\n",
     "\n",
     "# Compute the covariance matrix from df\n",
     "covariance = Covariance(method='pearson')\n",
-    "P = covariance.estimate(X=df, inplace=False)\n",
+    "covariance.estimate(X=df, inplace=True)\n",
     "\n",
     "\n",
     "# Display the results\n",
@@ -168,45 +168,6 @@
     "# \n",
     "print(\"\\nCovariance matrix (P):\")\n",
     "print(P)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.84327227, 0.33279283, 0.57938234, 0.11061847, 0.44939613,\n",
-       "       0.77133017, 0.32663374, 0.94114959, 0.96320663, 0.34238742,\n",
-       "       0.88270503, 0.39901046, 0.62533041, 0.68319486, 0.38868207,\n",
-       "       0.15925195, 0.63539713, 0.28000947, 0.75229739, 0.4843771 ,\n",
-       "       0.82656712, 0.77662533, 0.57931831, 0.29804091, 0.17571095,\n",
-       "       0.96539813, 0.35819744, 0.64231055, 0.3118272 , 0.67064347,\n",
-       "       0.94650214, 0.0866464 , 0.01716606, 0.68550322, 0.05368673,\n",
-       "       0.36105651, 0.14852124, 0.84304714, 0.88549113, 0.88888332,\n",
-       "       0.29491922, 0.68191632, 0.80059527, 0.89854149, 0.34575876,\n",
-       "       0.39474191, 0.38205575, 0.85388519, 0.76876971, 0.9283753 ,\n",
-       "       0.69720655, 0.83450307, 0.66142521, 0.74347626, 0.71151703,\n",
-       "       0.70109329, 0.97700828, 0.5734034 , 0.67502591, 0.27583677,\n",
-       "       0.47840375, 0.30971579, 0.98508601, 0.49189496, 0.57443099,\n",
-       "       0.13686638, 0.62379821, 0.89114842, 0.94777433, 0.96170709,\n",
-       "       0.01719947, 0.19358678, 0.00770478, 0.5816621 , 0.8405023 ,\n",
-       "       0.87834023, 0.85973865, 0.19004717, 0.30875598, 0.37028386,\n",
-       "       0.47679976, 0.15143882, 0.58624471, 0.44149938, 0.72455095,\n",
-       "       0.50940041, 0.52340566, 0.15839861, 0.94531427, 0.38234536,\n",
-       "       0.79679546, 0.72293974, 0.05980824, 0.88246653, 0.5103167 ,\n",
-       "       0.28681271, 0.39102527, 0.06894813, 0.4230586 , 0.03512026])"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mean"
    ]
   },
   {
@@ -224,13 +185,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,15 +231,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['highs', 'daqp', 'cvxopt', 'qpalm', 'quadprog', 'osqp']"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(USABLE_SOLVERS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import time\n",
     "# Extract the constraints in the format required by the solver\n",
     "GhAb = constraints.to_GhAb()\n",
     "\n",
     "# Loop over solvers, instantiate the quadratic program, solve it and store the results\n",
-    "#<your code here>"
+    "risk_aversion = 1\n",
+    "\n",
+    "results = pd.DataFrame(columns=list(USABLE_SOLVERS), index={'solution_found': bool, 'objective': float, 'primal_residual': float, 'dual_residual': float, 'duality_gap': float, 'runtime': float})\n",
+    "\n",
+    "for solver_name in USABLE_SOLVERS:\n",
+    "    qp = QuadraticProgram(\n",
+    "        P = covariance.matrix.to_numpy() * risk_aversion,\n",
+    "        q = expected_return.vector.to_numpy() * -1,\n",
+    "        G = GhAb['G'],\n",
+    "        h = GhAb['h'],\n",
+    "        A = GhAb['A'],\n",
+    "        b = GhAb['b'],\n",
+    "        lb = constraints.box['lower'].to_numpy(),\n",
+    "        ub = constraints.box['upper'].to_numpy(),\n",
+    "        solver = solver_name\n",
+    "    )\n",
+    "\n",
+    "    start_time = time.time()\n",
+    "    qp.solve()\n",
+    "    end_time = time.time()\n",
+    "\n",
+    "    sol = qp.results.get('solution')\n",
+    "    results.loc['solution_found', solver_name] = sol.found\n",
+    "    if sol.found:\n",
+    "        results.loc['objective', solver_name] = qp.objective_value()\n",
+    "        results.loc['primal_residual', solver_name] = sol.primal_residual()\n",
+    "        results.loc['dual_residual', solver_name] = sol.dual_residual()\n",
+    "        results.loc['duality_gap', solver_name] = sol.duality_gap()\n",
+    "        results.loc['runtime', solver_name] = end_time - start_time"
    ]
   },
   {
@@ -295,11 +300,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                  highs                   daqp  \\\n",
+      "solution_found                     True                   True   \n",
+      "objective                      9.152325               9.152325   \n",
+      "primal_residual                     0.0                    0.0   \n",
+      "dual_residual                       0.0                    0.0   \n",
+      "duality_gap      1.2604335353216811e-08  8.846257060213247e-13   \n",
+      "runtime                        0.013607               0.003995   \n",
+      "\n",
+      "                                cvxopt                  qpalm  \\\n",
+      "solution_found                    True                   True   \n",
+      "objective                     9.152325               9.151026   \n",
+      "primal_residual                    0.0               0.000043   \n",
+      "dual_residual                      0.0                    0.0   \n",
+      "duality_gap      1.988092328781262e-07  0.0012989187257221638   \n",
+      "runtime                       0.056733               0.012029   \n",
+      "\n",
+      "                               quadprog                 osqp  \n",
+      "solution_found                     True                 True  \n",
+      "objective                      9.152325             9.029323  \n",
+      "primal_residual                     0.0             0.001149  \n",
+      "dual_residual                       0.0             0.001865  \n",
+      "duality_gap      1.4164669437377597e-11  0.12033420001202089  \n",
+      "runtime                        0.010541             0.006516  \n"
+     ]
+    }
+   ],
    "source": [
-    "#<your code here>"
+    "print(results)"
    ]
   },
   {
